--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@ index/_1k_Lucene41_0.tip
 index/_3z.cfs
 index/_3h.cfe
 index/_18_Lucene41_0.tip
+/trec_eval
+/Sample.param
+/Sample.qry
+/myStructure.txt
