--- a/.gitignore
+++ b/.gitignore
@@ -1,83 +1,10 @@
-index/_5m.si
-index/_5d.cfs
-index/_5d.si
-index/_5d.cfe
-index/_52.si
-index/_52.cfs
-index/_52.cfe
-index/_4x.si
-index/_4x.cfs
-index/_4x.cfe
-index/_4r.si
-index/_5m.cfe
-index/_4r.cfs
-index/segments.gen
-index/segments_1
-index/_15.cfe
-index/_15.si
-index/_18.fdt
-index/_18.fdx
-index/_18.fnm
-index/_18.nvd
-index/_18.nvm
-index/_18.si
-index/_18.tvd
-index/_18.tvx
-index/_18_Lucene41_0.doc
-index/_18_Lucene41_0.pos
-index/_18_Lucene41_0.tim
-index/_1k.fdt
-index/_1k.fdx
-index/_1k.fnm
-index/_1k.nvm
-index/_1k.tvd
-index/_15.cfs
-index/_1k_Lucene41_0.doc
-index/_1k_Lucene41_0.pos
-index/_1k.si
-index/_1k_Lucene41_0.tim
-index/_3h.cfs
-index/_3z.cfe
-index/_3z.si
-index/_5y.cfs
-index/_5y.cfe
-index/_5x.si
-index/_5w.si
-index/_5x.cfe
-index/_5w.cfs
-index/_5x.cfs
-index/_5y.si
-index/_5m.cfs
-index/_4r.cfe
-index/_4i_Lucene41_0.tip
-index/_4i_Lucene41_0.pos
-index/_4i_Lucene41_0.doc
-index/_4i_Lucene41_0.tim
-index/_4i.tvx
-index/_4i.tvd
-index/_4i.si
-index/_4i.nvm
-index/_4i.nvd
-index/_4i.fnm
-index/_4i.fdx
-index/_5w.cfe
-index/_4i.fdt
-index/_3h.si
-index/_4c.cfe
-index/_4c.cfs
-index/_4c.si
-index/_1k.nvd
-index/_1k.tvx
-index/_1k_Lucene41_0.tip
-index/_3z.cfs
-index/_3h.cfe
-index/_18_Lucene41_0.tip
 /trec_eval
 /Sample.param
 /Sample.qry
 /myStructure.txt
 /report/
 /index/
+/bin/
 
 trec_eval
 ReadMe.txt
